@@ -4,6 +4,7 @@ import helper.Skeleton;
 import static helper.Skeleton.printCall;
 import static helper.Skeleton.printReturn;
 import java.util.List;
+import java.util.Arrays;
 
 public class Mycelium implements IActive {
     private final Fungus species;
@@ -13,7 +14,7 @@ public class Mycelium implements IActive {
     // Én is (by: Márton)
     // Most már én is (by: Panni)
     public Mycelium(Fungus fungus, Tecton end1, Tecton end2) {
-        Skeleton.printCall(this.getClass(), List.of(fungus, end1, end2));
+        Skeleton.printCall(this.getClass(), Arrays.asList(fungus, end1, end2));
         this.species = fungus;
         this.ends = new Tecton[] { end1, end2 };
 
@@ -41,9 +42,10 @@ public class Mycelium implements IActive {
 
     @Override
     public void tick(double dT) {
-        printCall(this, List.of(dT));
+        printCall(this, Arrays.asList(dT));
         boolean thickened = Skeleton.ask("Megvastagodott a gombafonal?");
-        if(thickened) species.myceliumGrowthComplete();
+        if (thickened)
+            species.myceliumGrowthComplete();
         printReturn();
     }
 }
